--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -303,7 +303,7 @@ along with this program.  If not, see https://www.gnu.org/licenses/.]]></string>
 
     <!-- Download Manager -->
     <string name="download_start">Lädt herunter\u2026</string>
-    <string name="title_activity_about">AboutActivity</string>
+    <string name="title_activity_about">Impressum</string>
 
     <!-- About Author -->
     <string name="show_intro">Einführung</string>
@@ -315,5 +315,10 @@ along with this program.  If not, see https://www.gnu.org/licenses/.]]></string>
     <string name="visit_website">Website besuchen</string>
     <string name="support_development">Entwicklung unterstützen</string>
     <string name="report_bugs">Fehler melden</string>
+    <string name="menu_privacy">Datenschutz</string>
+    <string name="image_sources">Bildquellen</string>
+    <string name="libs">Open-Source Bibliotheken</string>
+    <string name="share">Teilen</string>
+    <string name="colorush" translatable="false">ColoRush</string>
 
 </resources>
