--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -19,7 +19,7 @@
     <string name="menu_category_settings">Settings</string>
     <string name="menu_category_vertretung">Cover plan</string>
     <string name="menu_both">At a glance!</string>
-    <string name="menu_impressum">Imprint</string>
+    <string name="menu_impressum">About</string>
     <string name="menu_update">Updates</string>
     <string name="changelog">Changelog</string>
     <string name="menu_shop">Online shop</string>
@@ -135,7 +135,6 @@
     <string name="profile_subject">Profile-subject</string>
 
 
-    <string name="impressum_headline">Imprint</string>
     <string name="impressum_AboutLibs_Title">Open source libraries</string>
     <string name="privacy"><![CDATA[<h1> Privacy Policy </h1><br>The official Gymnasium Wendelstein App (hereinafter referred to as GymWen App) does not collect any data about its users.
     <br>That neither personal data nor device-specific data are collected or passed on to third parties.
@@ -147,9 +146,6 @@
     - Device information such as model, manufacturer, etc. (no serial number / IMEI)<br>
     - Operating system version<br>
     - Stack trace of the crash]]></string>
-    <string name="impressum_online_impressum">GymWen Imprint</string>
-    <string name="impressum_source_code">Source code</string>
-    <string name="impressum_attribution">Credits (image sources)</string>
     <string name="share_app">Share app with\u2026</string>
     <string name="share_app_message">Download the official GymWen app, you will be automatically informed about your representations, can order food in the cafeteria, search the list of teachers and much more:</string>
 
@@ -253,13 +249,12 @@
     <string name="share">Share</string>
     <string name="show_intro">Introduction</string>
     <string name="support_development">Support development</string>
-    <string name="title_activity_about">Imprint</string>
+    <string name="title_activity_about">About</string>
     <string name="visit_website">Visit website</string>
     <string name="write_email">Write an email</string>
     <string name="color_accent">Accent color</string>
     <string name="color_primary">Primary color</string>
     <string name="legal">Legal</string>
-    <string name="intro">Introduction</string>
     <string name="intro_five_title">Many other features</string>
     <string name="intro_four_title">parent mode</string>
     <string name="intro_three_title">teacherlist</string>
