--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -259,4 +259,5 @@
     <string name="intro_four_title">parent mode</string>
     <string name="intro_three_title">teacherlist</string>
     <string name="intro_two_title">sit-in</string>
+    <string name="error">An error occured</string>
 </resources>
