--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -70,7 +70,7 @@
     <string name="hours_short">H</string>
     <string name="hours_short_three">Hour</string>
     <string name="subject">Subj.</string>
-    <string name="teacher">Teacher</string>
+    <string name="teacher">T</string>
     <string name="teacher_short">T</string>
     <string name="room">Room</string>
     <string name="room_short">R</string>
