--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -264,4 +264,5 @@
     <string name="set_theme_black">Black</string>
     <string name="set_theme_dark">Dark</string>
     <string name="set_theme_light">Light</string>
+    <string name="imprint">Imprint</string>
 </resources>
