--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -269,5 +269,8 @@
     <string name="registration_dialog_title">User census</string>
     <string name="registration_dialog_content">To get to know, how many users this app has, I want to make a user census. Therefore some metadata of your internet connection will be transmitted and saved, like your ip-adress or the current time.
     \nDo you want to get involved?</string>
+    <string name="classes_short">C</string>
+    <string name="courses_short">C</string>
+    <string name="open_app">Open app</string>
 
 </resources>
