--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,7 @@
     <string name="noInternetConnection">Keine Internetverbindung!</string>
     <string name="share_vertretung">Vertretung senden an\u2026</string>
     <string name="day_past">(Vergangen)</string>
+    <string name="with_teacher">bei</string>
 
     <!--    Table-->
     <string name="classes">Klasse</string>
